--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,5 +24,7 @@ jobs:
             dep ensure
         fi
 
+    - name: Test
+      run: go test -v -cover ./...
     - name: Build
       run: go build -v .
