--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,15 @@ install: true
 notifications:
   email: false
 
+before_install:
+  - go get github.com/mattn/goveralls
+  - go get golang.org/x/tools/cmd/cover
+
 before_script:
   - GO111MODULE=on go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.17.1
 
 script:
-  - golangci-lint run       # run a bunch of code checkers/linters in parallel
-  - go test -v -race -cover ./...  # Run all the tests with the race detector enabled
+  - go vet
+  - golangci-lint run
+  - go test -v -race -cover ./...
+  - $HOME/gopath/bin/goveralls -repotoken ${COVERALLS_TOKEN}
