--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,14 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
+    - name: Get GolangCI-Lint
+      run: |
+        curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.17.1
+
+    - name: Lint
+      run: |
+        $(go env GOPATH)/bin/golangci-lint run
+
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
@@ -23,12 +31,6 @@ jobs:
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
             dep ensure
         fi
-
-    - name: Get linter
-      run: wget -O - -q https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.17.1
-
-    - name: Lint
-      run: golangci-lint run
 
     - name: Test
       run: go test -v -cover ./...
