--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ before_install:
   - go get golang.org/x/tools/cmd/cover
 
 before_script:
-  - wget -O - -q https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.17.1
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.17.1
 
 script:
   - go vet
-  - golangci-lint run
+  - $(go env GOPATH)/bin/golangci-lint run
   - go test -v -race -cover ./...
   - $HOME/gopath/bin/goveralls -repotoken ${COVERALLS_TOKEN}
